karl package Changelog
======================

Unreleased
----------

- LP# 510242: change submit buttons to say "submit" (as has been the
  case in previous releases) rather than "Edit" or "Add".

- LP# 510770: Sort categories by title rather than path.

- LP #510304: Add/edit calendar event should show default category
  first always.

- LP #513340: Calendar event blocks not formatting correctly in IE

- LP #510240: Formish edit screens have wrong heading

- LP #506106: "accept invitation" refused with password length error
  no matter what password length provided.

- LP #510187: Get the display for per-office data in People reports to
  match the previous layout.

- LP #497437: Fixed all-day event option for calendar events.

- LP #503442: Fixed hardcoded year left in calendar week view template.

- LP #510285: Use opaque identifiers for new category and layer ids to
  make it possible to add a category with the same label as a layer
  and vice versa.

- LP #509597: IndexError on Calendar _find_contiguous_slot_across_days

- LP #503451: Fixed multi-day calendar event not on both days.

- LP #503771: Fixed day links on calendar list view.

- LP #503523: AttributeError: 'CalendarEvent' object has no attribute 'color'

- LP #503450: Fixed that the hour and minute selectors on the add calendar
  event page would lose their all-day state if the user entered an end date
  that was before the start date.

- LP #496331: Calendar list view now shows a paginated listing of upcoming
  events with 20 events per page.

- Merged svn+ssh://osi@osi.agendaless.com/home/osi/bfgsvn/karl/branches/formish
  branch, which replaces some form-based views with formish forms.

- LP #496381: Calendar event duration must be at least one minute.

- Added missing registration for IFileInfo adapter for ICommunityRootFolder.

- Fixed bug in evolve2 step that updated 'Last Activity' for every community.

- Added missing view registrations for mailin monitor utility.
